--- a/firstapp/templates/includes/_navbar.html
+++ b/firstapp/templates/includes/_navbar.html
@@ -7,7 +7,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MyFlaskApp</a>
+        <a class="navbar-brand" href="/">MyFlaskApp</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -16,7 +16,14 @@
           <li><a href="/articles">Articles</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/register">Register</a></li>
+          {% if session.logged_in %}
+          <li><a href="/dashboard">Dashboard</a></li>
+          <li><a href="/logout">logout</a></li>
+          
+          {% else %}
+            <li><a href="/register">Register</a></li>
+            <li><a href="/login">login</a></li>
+          {%endif%}
          
         </ul>
       </div><!--/.nav-collapse -->
