--- a/firstapp/templates/home.html
+++ b/firstapp/templates/home.html
@@ -6,5 +6,9 @@
     <p class = "lead">
         This application is built on the Python Flask framework
     </p>
+    {% if session.logged_in == NULL%}
+        <a href="/register" class="btn btn-primary btn-lg" >Register</a>
+        <a href="/login" class = "btn btn-success btn-lg">login</a>
+    {% endif %}
 </div>
-{% endblock %}
+{% endblock %}  
