--- a/firstapp/templates/layout.html
+++ b/firstapp/templates/layout.html
@@ -12,11 +12,16 @@
     
 
     <div class = "container">
+        {% include 'includes/_messages.html' %}
         {% block body %}{% endblock %}
     </div>
     
 
     <script src = "https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//cdn.ckeditor.com/4.13.1/basic/ckeditor.js"></script>
+    <script type="text/javascript">
+        CKEDITOR.replace('editor');
+    </script>
 
 </body>
 </html>
